tests/testcrate/tests/ui/insert_syntax.stderr
error: expected = but got +=
  --> $DIR/insert_syntax.rs:52:33
   |
52 |     sql!(Table.insert(i32_field += 42, field1 = "Test"));
   |                                 ^^

error: expected = but got -=
  --> $DIR/insert_syntax.rs:55:46
   |
55 |     sql!(Table.insert(i32_field = 42, field1 -= "Test"));
   |                                              ^^

error: aborting due to 2 previous errors

